<resources>
<!--    Titles-->
    <string name="app_name">vocabular</string>
    <string name="title_home">Home</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_statistics">Stats</string>
    <string name="title_tests">Tests</string>
    <string name="title_add_dictionary_item">Add Dictionary Item</string>
    <string name="title_define_languages">Define Languages</string>
    <string name="title_spelling_test">Spelling Test</string>
    <!--    StartUp-->
    <string name="welcome_text">Welcome to Vocabular</string>
    <string name="new_language_text">The language you want to learn is…</string>
    <string name="native_language_text">Your native language is…</string>
    <string name="new_language_hint_text">Learning Language</string>
    <string name="native_language_hint_text">Native Language</string>

<!--    Dictionary Item-->
    <string name="word_description">Word in learning language</string>
    <string name="meaning_description">Meaning in native language</string>
    <string name="delete_button_description">Delete dictionary entry button</string>
    <string name="default_word_text">Word</string>
    <string name="default_meaning_text">Meaning</string>

    <string name="toast_fields_must_be_filled">Both fields must contain values</string>

...
    <string name="no_words_in_dictionary_text">No words in dictionary</string>
    <string name="tests_taken_text">Tests Taken:</string>
    <string name="default_number_text">0</string>
    <string name="quick_add_text">Add New Word</string>

<!--    Dictionary Fragment-->
    <string name="add_dictionary_item_description">Add dictionary item button</string>

    <!--    Tests Fragment-->
    <string name="spelling_test_card_text">Spelling Test</string>
    <string name="spelling_test_description_text">A test where you try to spell words in either your language or the one you are learning</string>

    <string name="matching_test_card_text">Matching Test</string>
...
